# ai_study

client/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts
client/app/: AuthProvider.tsx  CatIcon.tsx  NavBar.tsx  QueryProviders.tsx  layout.tsx  page.tsx
client/app/api/: signIn.ts  signUp.ts
client/app/chat/: ChatInput.tsx  ChatMessages.tsx  ChatSessions.tsx  SpeechBubble.tsx  layout.tsx  page.tsx
client/app/login/: ApiStatusIcon.tsx  page.tsx
client/app/signin/: ApiStatusIcon.tsx  page.tsx
client/app/signup/: page.tsx
client/components/ui/: label.tsx  textarea.tsx
client/hooks/: useChatHistory.ts  useSendChat.ts  useSession.ts
client/lib/: apiFetch.ts  handleUnauthorizedRedirect.ts  httpError.ts  streamParser.ts
client/store/: useUserInfo.ts
client/types/: sessionType.ts
server/: .gitignore  main.py  pyproject.toml
server/api/: router.py
server/core/: config.py
server/db/: redis.py  session.py
server/lib/: mcp_tools.py  security.py
server/local_mcp_server/: brave_mcp_server.py
server/models/: messages_model.py  sessions_model.py  users_model.py
server/repositories/: messages_repository.py  sessions_repository.py
server/schemas/: base_schema.py  chat_schema.py  llm_response_schema.py  sign_in_schema.py  sign_up_schema.py
server/services/: chat_service.py  sign_in.py  sign_up.py
