[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "tjdghgud12"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[all] (>=0.136.1,<0.137.0)",
    "langchain-google-genai (>=4.2.2,<5.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)"
]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"